# hello-py

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  results_haiku_4_5.txt
scripts/: auto_threshold.py
src/: __init__.py  agent.py  config.py  config.py.bak  environment.py  evaluator.py  test_runner.py  tools.py
